--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,3 +4,8 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+anyhow = "1.0.95"
+clap = { version = "4.5.23", features = ["derive"] }
+serde = { version = "1", features = ["derive"] }
+serde_yaml = "0.9.34"
+strum_macros = "0.26.4"
